--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="navlink" title="Download the Resume">
-          <a href="./assets/pdfs/resume.pdf" class="resume" target="_blank" download="Naveen_Kumar_Reddy_Resume">
+          <a href="./assets/pdfs/naveenresume.pdf" class="resume" target="_blank" download="Naveen_Kumar_Reddy_Resume">
             <img src="./assets/images/download.png" alt="download"  />
             <div>Resume</div>
           </a>
@@ -102,17 +102,17 @@
       <div class="skillsContainer">
         <div class="skill">
           <img src="./assets/images/html.png" alt="Html" class="skillImage" />
-          <div class="skillName">Html</div>
+          <div class="skillName">HTML</div>
         </div>
         
         <div class="skill">
           <img src="./assets/images/css.png" alt="Css" class="skillImage" />
-          <div class="skillName">Css</div>
+          <div class="skillName">CSS</div>
         </div>
 
         <div class="skill">
           <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" />
-          <div class="skillName">Javascript</div>
+          <div class="skillName">JavaScript</div>
         </div>
 
         <div class="skill">
@@ -122,7 +122,7 @@
 
         <div class="skill">
           <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" />
-          <div class="skillName">Jquery</div>
+          <div class="skillName">jQuery</div>
         </div>
 
         <div class="skill">
@@ -142,12 +142,12 @@
 
         <div class="skill">
           <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" />
-          <div class="skillName">Nodejs</div>
+          <div class="skillName">Node.js</div>
         </div>
 
         <div class="skill">
           <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" />
-          <div class="skillName">Expressjs</div>
+          <div class="skillName">Express.js</div>
         </div>
 
         <div class="skill">
@@ -263,49 +263,10 @@
             </div>
           </div>
         </div>
-
-
-        <div class="project">
-          <div class="projectName">3.News App</div>
-          <div class="projectImageContainer">
-            <img src="./assets/images/news.png" alt="News App" class="projectImage" />
-          </div>
-          <div class="projectInfo">
-            <div class="projectLinks">
-              <a href="https://github.com/naveen0-0/news" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
-                <div>Code</div>
-              </a>
-              <a href="https://newsroll.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
-                <div>Live</div>
-              </a>
-            </div>
-            <div class="techContainer">
-              <div class="techUsed">Tech used</div>
-              <div class="techs">
-                <div class="tech">HTML</div>
-                <div class="tech">CSS</div>
-                <div class="tech">Javascript</div>
-                <div class="tech">React</div>         
-              </div>
-            </div>
-            <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Features & Functionality</div>
-              <ol class="orderedlist">
-                <li>It is a simple news app built with React.</li>
-                <li>Click on the article and you will be redirected to the news article.</li>
-                <li>Press the hamburger icon to open the menu from the left.</li>
-                <li>Select any category you want.</li>
-                <li>Enjoy the articles from that category.</li>
-              </ol>
-            </div>
-          </div>
-        </div>
-
+        
 
         <div class="project">
-          <div class="projectName">4.Movie App</div>
+          <div class="projectName">3.Movie App</div>
           <div class="projectImageContainer">
             <img src="./assets/images/movie.png" alt="Movie App" class="projectImage" />
           </div>
@@ -344,9 +305,8 @@
           </div>
         </div>
 
-
         <div class="project">
-          <div class="projectName">5.FullStack Shop</div>
+          <div class="projectName">4.E-commerce Shop</div>
           <div class="projectImageContainer">
             <img src="./assets/images/shop.png" alt="FullStack Shop" class="projectImage" />
           </div>
@@ -385,6 +345,43 @@
           </div>
         </div>
 
+        <div class="project">
+          <div class="projectName">5.News App</div>
+          <div class="projectImageContainer">
+            <img src="./assets/images/news.png" alt="News App" class="projectImage" />
+          </div>
+          <div class="projectInfo">
+            <div class="projectLinks">
+              <a href="https://github.com/naveen0-0/news" target="_blank" title='View Code' class="projectLink">
+                <img src="./assets/images/github.png" alt="Github" />
+                <div>Code</div>
+              </a>
+              <a href="https://newsroll.netlify.app" target="_blank" title='Go to Site' class="projectLink">
+                <img src="./assets/images/live.png" alt="Live" />
+                <div>Live</div>
+              </a>
+            </div>
+            <div class="techContainer">
+              <div class="techUsed">Tech used</div>
+              <div class="techs">
+                <div class="tech">HTML</div>
+                <div class="tech">CSS</div>
+                <div class="tech">Javascript</div>
+                <div class="tech">React</div>         
+              </div>
+            </div>
+            <div class="extraprojectinfo">
+              <div class="extraprojectinfotitle">Features & Functionality</div>
+              <ol class="orderedlist">
+                <li>It is a simple news app built with React.</li>
+                <li>Click on the article and you will be redirected to the news article.</li>
+                <li>Press the hamburger icon to open the menu from the left.</li>
+                <li>Select any category you want.</li>
+                <li>Enjoy the articles from that category.</li>
+              </ol>
+            </div>
+          </div>
+        </div>
 
         <div class="project">
           <div class="projectName">6.Covid Tracker</div>
